--- a/apps/extension/popup.html
+++ b/apps/extension/popup.html
@@ -24,6 +24,53 @@
       gap: 12px;
     }
 
+    .header-right {
+      margin-left: auto;
+    }
+
+    .toggle {
+      position: relative;
+      display: inline-block;
+      width: 40px;
+      height: 22px;
+      cursor: pointer;
+    }
+
+    .toggle input {
+      position: absolute;
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .toggle-slider {
+      position: absolute;
+      inset: 0;
+      background: rgba(0,0,0,0.3);
+      border-radius: 11px;
+      transition: background 0.2s;
+    }
+
+    .toggle-slider::before {
+      content: '';
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      left: 3px;
+      top: 3px;
+      background: white;
+      border-radius: 50%;
+      transition: transform 0.2s;
+    }
+
+    .toggle input:checked + .toggle-slider {
+      background: #34d399;
+    }
+
+    .toggle input:checked + .toggle-slider::before {
+      transform: translateX(18px);
+    }
+
     .header-icon {
       width: 36px;
       height: 36px;
@@ -237,6 +284,12 @@
     <div>
       <h1>The Seer</h1>
       <p>AI Resume Fit Checker</p>
+    </div>
+    <div class="header-right">
+      <label class="toggle" title="Enable/disable Seer">
+        <input type="checkbox" id="seer-toggle" checked>
+        <span class="toggle-slider"></span>
+      </label>
     </div>
   </div>
 
