--- a/apps/extension/popup.html
+++ b/apps/extension/popup.html
@@ -11,17 +11,42 @@
       width: 380px;
       min-height: 200px;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #fafafa;
-      color: #1e1b4b;
+      background: #f8f9fa;
+      color: #1a1a2e;
     }
 
     .header {
-      background: linear-gradient(135deg, #6366f1, #8b5cf6);
-      color: white;
-      padding: 16px 20px;
+      background: #1a1a2e;
+      color: #f0f0f4;
+      padding: 14px 20px;
       display: flex;
       align-items: center;
       gap: 12px;
+    }
+
+    .header-icon {
+      width: 32px;
+      height: 32px;
+      background: rgba(255,255,255,0.08);
+      border: 1px solid rgba(255,255,255,0.12);
+      border-radius: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 15px;
+      font-weight: 700;
+      color: #e0e0e8;
+    }
+
+    .header h1 {
+      font-size: 15px;
+      font-weight: 600;
+      letter-spacing: 0.2px;
+    }
+
+    .header p {
+      font-size: 11px;
+      color: #8b8b9e;
     }
 
     .header-right {
@@ -31,8 +56,8 @@
     .toggle {
       position: relative;
       display: inline-block;
-      width: 40px;
-      height: 22px;
+      width: 36px;
+      height: 20px;
       cursor: pointer;
     }
 
@@ -46,51 +71,30 @@
     .toggle-slider {
       position: absolute;
       inset: 0;
-      background: rgba(0,0,0,0.3);
-      border-radius: 11px;
+      background: #3a3a50;
+      border-radius: 10px;
       transition: background 0.2s;
     }
 
     .toggle-slider::before {
       content: '';
       position: absolute;
-      width: 16px;
-      height: 16px;
+      width: 14px;
+      height: 14px;
       left: 3px;
       top: 3px;
-      background: white;
+      background: #8b8b9e;
       border-radius: 50%;
-      transition: transform 0.2s;
+      transition: transform 0.2s, background 0.2s;
     }
 
     .toggle input:checked + .toggle-slider {
-      background: #34d399;
+      background: #22c55e;
     }
 
     .toggle input:checked + .toggle-slider::before {
-      transform: translateX(18px);
-    }
-
-    .header-icon {
-      width: 36px;
-      height: 36px;
-      background: rgba(255,255,255,0.2);
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 18px;
-      font-weight: 700;
-    }
-
-    .header h1 {
-      font-size: 16px;
-      font-weight: 600;
-    }
-
-    .header p {
-      font-size: 12px;
-      opacity: 0.8;
+      transform: translateX(16px);
+      background: white;
     }
 
     .content {
@@ -99,52 +103,53 @@
 
     .empty-state {
       text-align: center;
-      padding: 32px 16px;
-      color: #6b7280;
+      padding: 28px 16px;
+      color: #71717a;
     }
 
     .empty-state p {
       font-size: 14px;
-      margin-bottom: 12px;
+      margin-bottom: 8px;
     }
 
     .empty-state .hint {
       font-size: 12px;
-      color: #9ca3af;
+      color: #a1a1aa;
     }
 
     .score-section {
       text-align: center;
       padding: 20px 0;
-      border-bottom: 1px solid #e5e7eb;
+      border-bottom: 1px solid #e4e4e7;
       margin-bottom: 16px;
     }
 
     .score-circle {
-      width: 80px;
-      height: 80px;
+      width: 72px;
+      height: 72px;
       border-radius: 50%;
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      font-size: 28px;
+      font-size: 26px;
       font-weight: 700;
       color: white;
       margin-bottom: 8px;
     }
 
-    .score-pass { background: linear-gradient(135deg, #10b981, #059669); }
-    .score-fail { background: linear-gradient(135deg, #ef4444, #dc2626); }
+    .score-pass { background: #16a34a; }
+    .score-fail { background: #dc2626; }
 
     .score-label {
-      font-size: 14px;
+      font-size: 13px;
       font-weight: 600;
+      color: #3f3f46;
       margin-bottom: 4px;
     }
 
     .job-info {
       font-size: 12px;
-      color: #6b7280;
+      color: #71717a;
     }
 
     .section {
@@ -152,9 +157,9 @@
     }
 
     .section h3 {
-      font-size: 13px;
+      font-size: 11px;
       font-weight: 600;
-      color: #4b5563;
+      color: #71717a;
       margin-bottom: 8px;
       text-transform: uppercase;
       letter-spacing: 0.5px;
@@ -168,18 +173,18 @@
 
     .skill-tag {
       padding: 2px 8px;
-      border-radius: 12px;
+      border-radius: 4px;
       font-size: 11px;
       font-weight: 500;
     }
 
     .skill-matched {
-      background: #ecfdf5;
-      color: #065f46;
+      background: #dcfce7;
+      color: #166534;
     }
 
     .skill-gap {
-      background: #fef2f2;
+      background: #fee2e2;
       color: #991b1b;
     }
 
@@ -188,94 +193,96 @@
       justify-content: space-between;
       padding: 6px 0;
       font-size: 13px;
-      border-bottom: 1px solid #f3f4f6;
+      border-bottom: 1px solid #f4f4f5;
     }
 
     .analysis-row:last-child {
       border-bottom: none;
     }
 
-    .analysis-label { color: #6b7280; }
-    .analysis-value { font-weight: 600; }
+    .analysis-label { color: #71717a; }
+    .analysis-value { font-weight: 600; color: #27272a; }
 
     .btn {
       width: 100%;
       padding: 10px 16px;
       border: none;
       border-radius: 8px;
-      font-size: 14px;
+      font-size: 13px;
       font-weight: 600;
       cursor: pointer;
-      transition: background 0.2s;
+      transition: background 0.15s;
       margin-bottom: 8px;
     }
 
     .btn-primary {
-      background: linear-gradient(135deg, #6366f1, #8b5cf6);
+      background: #1a1a2e;
       color: white;
     }
 
-    .btn-primary:hover { background: linear-gradient(135deg, #4f46e5, #7c3aed); }
+    .btn-primary:hover { background: #2a2a42; }
     .btn-primary:disabled {
-      opacity: 0.5;
+      opacity: 0.4;
       cursor: not-allowed;
     }
 
     .btn-secondary {
-      background: #f3f4f6;
-      color: #374151;
+      background: #f4f4f5;
+      color: #3f3f46;
     }
 
-    .btn-secondary:hover { background: #e5e7eb; }
+    .btn-secondary:hover { background: #e4e4e7; }
 
     .btn-success {
-      background: #10b981;
+      background: #16a34a;
       color: white;
     }
 
+    .btn-success:hover { background: #15803d; }
+
     .footer {
-      padding: 12px 20px;
-      border-top: 1px solid #e5e7eb;
+      padding: 10px 20px;
+      border-top: 1px solid #e4e4e7;
       text-align: center;
     }
 
     .footer a {
       font-size: 12px;
-      color: #6366f1;
+      color: #71717a;
       text-decoration: none;
     }
 
-    .footer a:hover { text-decoration: underline; }
+    .footer a:hover { color: #3f3f46; text-decoration: underline; }
 
     .loading {
       text-align: center;
       padding: 16px;
-      color: #6b7280;
+      color: #71717a;
       font-size: 14px;
     }
 
     .error {
-      padding: 12px;
+      padding: 10px 12px;
       background: #fef2f2;
       border: 1px solid #fecaca;
-      border-radius: 8px;
+      border-radius: 6px;
       color: #991b1b;
-      font-size: 13px;
+      font-size: 12px;
       margin-bottom: 12px;
     }
 
     .recommendation {
       display: inline-block;
       padding: 2px 10px;
-      border-radius: 12px;
+      border-radius: 4px;
       font-size: 12px;
       font-weight: 600;
     }
 
     .rec-strong_yes { background: #dcfce7; color: #166534; }
-    .rec-yes { background: #ecfdf5; color: #065f46; }
-    .rec-maybe { background: #fffbeb; color: #92400e; }
-    .rec-no { background: #fef2f2; color: #991b1b; }
+    .rec-yes { background: #dbeafe; color: #1e40af; }
+    .rec-maybe { background: #fef3c7; color: #92400e; }
+    .rec-no { background: #fee2e2; color: #991b1b; }
   </style>
 </head>
 <body>
@@ -283,7 +290,7 @@
     <div class="header-icon">S</div>
     <div>
       <h1>The Seer</h1>
-      <p>AI Resume Fit Checker</p>
+      <p>Resume Fit Checker</p>
     </div>
     <div class="header-right">
       <label class="toggle" title="Enable/disable Seer">
